Added support for resources, added support for desktop only projects, moved to plugin package, self preview (not working yet)

--- a/intellij-plugin/src/main/resources/META-INF/plugin.xml
+++ b/intellij-plugin/src/main/resources/META-INF/plugin.xml
@@ -10,7 +10,10 @@
 
     <extensions defaultExtensionNs="com.intellij">
         <!-- Add your extensions here -->
-        <fileEditorProvider implementation="de.drick.compose.hotpreview.HotPreviewSplitEditorProvider" />
+        <fileEditorProvider implementation="de.drick.compose.hotpreview.plugin.HotPreviewSplitEditorProvider" />
+        <!--
+        <deadCode implementation="de.drick.compose.hotpreview.plugin.HotPreviewEntryPoint" />
+        -->
     </extensions>
 
 </idea-plugin>
