--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -9,22 +9,29 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     permissions:
       contents: read
       packages: write
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Fetch Sources
+      uses: actions/checkout@v4
+
+    - name: Gradle Wrapper Validation
+      uses: gradle/actions/wrapper-validation@v3
+
     - name: Set Up JDK
       uses: actions/setup-java@v4
       with:
         distribution: 'zulu' # See 'Supported distributions' for available options
         java-version: '21'
         cache: 'gradle'
-    - name: Change wrapper permissions
-      run: chmod +x ./gradlew
-          
+
+    # Setup Gradle
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v4
+
     - name: Publish package
       run: ./gradlew publishAndReleaseToMavenCentral --no-configuration-cache
       env:
