--- a/intellij-plugin/gradle.properties
+++ b/intellij-plugin/gradle.properties
@@ -3,3 +3,4 @@ kotlin.version=2.1.0
 compose.version=1.7.3
 org.gradle.configuration-cache=true
 org.gradle.caching=true
+org.jetbrains.intellij.platform.donwloadSources=true
