--- a/.github/workflows/plugin-release.yml
+++ b/.github/workflows/plugin-release.yml
@@ -18,6 +18,15 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        ijp_branch: [242, 243]
+        include:
+          - ijp_version: 2024.2.5
+            ijp_branch: 242
+          - ijp_version: 2024.3.2
+            ijp_branch: 243
+
     steps:
       - name: Fetch Sources
         uses: actions/checkout@v4
@@ -36,13 +45,21 @@ jobs:
         uses: gradle/actions/setup-gradle@v4
 
       - name: Build plugin
+        env:
+          IJP_VERSION: ${{ matrix.ijp_version }}
+          IJP_BRANCH: ${{ matrix.ijp_branch }}
         run: ./gradlew buildPlugin
 
       - name: Run Plugin Verification tasks
+        env:
+          IJP_VERSION: ${{ matrix.ijp_version }}
+          IJP_BRANCH: ${{ matrix.ijp_branch }}
         run: ./gradlew verifyPlugin
 
       - name: Sign Plugin
         env:
+          IJP_VERSION: ${{ matrix.ijp_version }}
+          IJP_BRANCH: ${{ matrix.ijp_branch }}
           PLUGIN_CERTIFICATE_CHAIN: ${{ secrets.PLUGIN_CERTIFICATE_CHAIN }}
           PLUGIN_PRIVATE_KEY: ${{ secrets.PLUGIN_PRIVATE_KEY }}
           PLUGIN_PRIVATE_KEY_PASSWORD: ${{ secrets.PLUGIN_PRIVATE_KEY_PASSWORD }}
@@ -50,5 +67,7 @@ jobs:
 
       - name: Release to plugin market
         env:
+          IJP_VERSION: ${{ matrix.ijp_version }}
+          IJP_BRANCH: ${{ matrix.ijp_branch }}
           PLUGIN_PUBLISH_TOKEN: ${{ secrets.PLUGIN_PUBLISH_TOKEN }}
         run: ./gradlew publishPlugin
