Complete refactoring of rendering preview. And adapted group selection.

--- a/intellij-plugin/gradle.properties
+++ b/intellij-plugin/gradle.properties
@@ -1,6 +1,6 @@
 kotlin.code.style=official
-kotlin.version=2.0.21-RC
-compose.version=1.7.1
+kotlin.version=2.1.10
+compose.version=1.7.3
 org.gradle.configuration-cache=true
 org.gradle.caching=true
 org.jetbrains.intellij.platform.donwloadSources=true
