--- a/intellij-plugin/gradle.properties
+++ b/intellij-plugin/gradle.properties
@@ -1,6 +1,7 @@
 kotlin.code.style=official
 kotlin.version=2.1.10
 compose.version=1.7.3
+kotlin.stdlib.default.dependency = false
 org.gradle.configuration-cache=true
 org.gradle.caching=true
 org.jetbrains.intellij.platform.donwloadSources=true
