Added support for native macOS target to the HotPreview annotation dependency.

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,3 +26,4 @@ kotlin.mpp.androidGradlePluginCompatibility.nowarn=true
 
 # important to support mac targets
 kotlin.native.enableKlibsCrossCompilation=true
+org.jetbrains.compose.experimental.macos.enabled=true
