Fixed problems with github workflow

--- a/.github/actions/plugin-publish-steps/action.yml
+++ b/.github/actions/plugin-publish-steps/action.yml
@@ -13,7 +13,7 @@ runs:
   using: "composite"
   steps:
     - id: build
-      uses: plugin-build-steps.yml
+      uses: action.yml
 
     - name: Sign Plugin
       env:
