--- a/intellij-plugin/gradle.properties
+++ b/intellij-plugin/gradle.properties
@@ -8,6 +8,7 @@ pluginDescription=A plugin that shows previews of Compose Multiplatform files.
 # This version must be aligned to the highest plugin-*'s module value
 platformType=IC
 platformVersion=2025.1.1
+# List of versions https://plugins.jetbrains.com/docs/intellij/android-studio-releases-list.html
 
 jdk.level=21
 gradleVersion=8.13
