--- a/.github/workflows/plugin-manual.yml
+++ b/.github/workflows/plugin-manual.yml
@@ -18,6 +18,6 @@ jobs:
 
     steps:
       - id: Publish
-        uses: plugin-publish-steps.yml
+        uses: ./github/actions/plugin-publish-steps
           with:
             channel: ${{ inputs.channel }}
