--- a/.github/workflows/plugin-manual.yml
+++ b/.github/workflows/plugin-manual.yml
@@ -17,6 +17,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Fetch Sources
+        uses: actions/checkout@v4
+
       - id: Publish
         uses: ./.github/actions/plugin-publish-steps
           with:
