--- a/.github/actions/plugin-publish-steps/action.yml
+++ b/.github/actions/plugin-publish-steps/action.yml
@@ -21,6 +21,7 @@ runs:
         PLUGIN_PRIVATE_KEY: ${{ secrets.PLUGIN_PRIVATE_KEY }}
         PLUGIN_PRIVATE_KEY_PASSWORD: ${{ secrets.PLUGIN_PRIVATE_KEY_PASSWORD }}
       run: ./gradlew :plugin-251:signPlugin
+      shell: bash
 
     - name: Release to plugin market
       env:
@@ -29,3 +30,4 @@ runs:
       run: |
         echo "Publishing to channel: ${{ inputs.channel }}"
       #run: ./gradlew :plugin-251:publishPlugin
+      shell: bash
