Try to fix again

--- a/.github/workflows/plugin-manual.yml
+++ b/.github/workflows/plugin-manual.yml
@@ -24,3 +24,8 @@ jobs:
         uses: ./.github/actions/plugin-publish-steps
         with:
           channel: ${{ inputs.channel }}
+
+      - name: Finished
+        run: |
+          echo "Plugin published to channel: ${{ inputs.channel }}"
+        shell: bash
