Moved working directory to actions

--- a/.github/actions/plugin-build-steps/action.yml
+++ b/.github/actions/plugin-build-steps/action.yml
@@ -5,6 +5,10 @@
 name: 'Prepare and build plugin'
 description: 'Builds and checks all IJP targets'
 
+defaults:
+  run:
+    working-directory: ./intellij-plugin
+
 runs:
   using: "composite"
   steps:
