Moved secrets into inputs for github action

--- a/.github/workflows/plugin-manual.yml
+++ b/.github/workflows/plugin-manual.yml
@@ -24,6 +24,10 @@ jobs:
         uses: ./.github/actions/plugin-publish-steps
         with:
           channel: ${{ inputs.channel }}
+          PLUGIN_CERTIFICATE_CHAIN: ${{ secrets.PLUGIN_CERTIFICATE_CHAIN }}
+          PLUGIN_PRIVATE_KEY: ${{ secrets.PLUGIN_PRIVATE_KEY }}
+          PLUGIN_PRIVATE_KEY_PASSWORD: ${{ secrets.PLUGIN_PRIVATE_KEY_PASSWORD }}
+          PLUGIN_PUBLISH_TOKEN: ${{ secrets.PLUGIN_PUBLISH_TOKEN }}
 
       - name: Finished
         run: |
