--- a/.github/workflows/plugin-release.yml
+++ b/.github/workflows/plugin-release.yml
@@ -22,8 +22,12 @@ jobs:
         uses: ./.github/actions/plugin-publish-steps
         with:
           channel: "default"
+          PLUGIN_CERTIFICATE_CHAIN: ${{ secrets.PLUGIN_CERTIFICATE_CHAIN }}
+          PLUGIN_PRIVATE_KEY: ${{ secrets.PLUGIN_PRIVATE_KEY }}
+          PLUGIN_PRIVATE_KEY_PASSWORD: ${{ secrets.PLUGIN_PRIVATE_KEY_PASSWORD }}
+          PLUGIN_PUBLISH_TOKEN: ${{ secrets.PLUGIN_PUBLISH_TOKEN }}
 
       - name: Finished
         run: |
-          echo "Plugin published to channel: ${{ inputs.channel }}"
+          echo "Plugin published to channel: default"
         shell: bash
