--- a/.github/actions/plugin-publish-steps/action.yml
+++ b/.github/actions/plugin-publish-steps/action.yml
@@ -25,7 +25,7 @@ runs:
   using: "composite"
   steps:
     - id: build
-      uses: action.yml
+      uses: ./.github/actions/plugin-build-steps
 
     - name: Sign Plugin
       env:
