--- a/intellij-plugin/gradle.properties
+++ b/intellij-plugin/gradle.properties
@@ -1,5 +1,6 @@
 # Additional plugin properties are set in */plugin.properties for each target IJP
 pluginGroup=de.drick.compose.hotpreview.plugin
+pluginId=de.drick.compose.hotpreview.plugin
 pluginName=Compose Multiplatform HotPreview"
 pluginRepositoryUrl=https://github.com/rock3r/jewel-ijp-template
 pluginVersion=0.9.0
