--- a/intellij-plugin/gradle.properties
+++ b/intellij-plugin/gradle.properties
@@ -1,7 +1,7 @@
 # Additional plugin properties are set in */plugin.properties for each target IJP
 pluginGroup=de.drick.compose.hotpreview.plugin
 pluginId=de.drick.compose.hotpreview.plugin
-pluginName=Compose Multiplatform HotPreview q
+pluginName=Compose Multiplatform HotPreview
 pluginRepositoryUrl=https://github.com/rock3r/jewel-ijp-template
 pluginVersion=0.9.0
 pluginDescription=A plugin that shows previews of Compose Multiplatform files.
